incluyendo links a cada pagina de partidos

--- a/partidos.html
+++ b/partidos.html
@@ -36,15 +36,15 @@
         </nav>
     </header>
     <section class="partido-container">
-            <a href="#" class="partido-card display-ib pos-r font-bislai">
+            <a href="http://bislai.co/partidos/pp.html" class="partido-card display-ib pos-r font-bislai">
                 <div class="partido-card-bg"></div>
                 <div class="partido-card-top pos-a">
                     <h3 class="partido-card-title">PARTIDO POPULAR</h3>
                     <p class="partido-card-votos">87554 VOTOS / 26.88%</p>
                     <p class="partido-card-concejales">10 CONCEJALES</p>
                 </div>
-            </a href="#">
-            <a href="#" class="partido-card partido-card-right partido-card-zec display-ib pos-r font-bislai">
+            </a>
+            <a href="http://bislai.co/partidos/zec.html" class="partido-card partido-card-right partido-card-zec display-ib pos-r font-bislai">
                 <div class="partido-card-bg partido-card-left"></div>
                 <div class="partido-card-top partido-card-top-right partido-card-top-zec pos-a">
                     <h3 class="partido-card-title">ZARAGOZA EN COMÚN</h3>
@@ -52,7 +52,7 @@
                     <p class="partido-card-concejales">9 CONCEJALES</p>
                 </div>
             </a>
-            <a href="#" class="partido-card partido-card-psoe display-ib pos-r font-bislai">
+            <a href="http://bislai.co/partidos/psoe.html" class="partido-card partido-card-psoe display-ib pos-r font-bislai">
                 <div class="partido-card-bg partido-card-left"></div>
                 <div class="partido-card-top partido-card-top-psoe pos-a">
                     <h3 class="partido-card-title">PARTIDO SOCIALISTA OBRERO ESPAÑOL</h3>
@@ -60,7 +60,7 @@
                     <p class="partido-card-concejales">6 CONCEJALES</p>
                 </div>
             </a>
-            <a href="#" class="partido-card partido-card-right partido-card-cs display-ib pos-r font-bislai">
+            <a href="http://bislai.co/partidos/cs.html" class="partido-card partido-card-right partido-card-cs display-ib pos-r font-bislai">
                 <div class="partido-card-bg"></div>
                 <div class="partido-card-top partido-card-top-right partido-card-top-cs pos-a">
                     <h3 class="partido-card-title">CIUDADANOS</h3>
@@ -68,7 +68,7 @@
                     <p class="partido-card-concejales">4 CONCEJALES</p>
                 </div>
             </a>
-            <a href="#" class="partido-card partido-card-cha display-ib pos-r font-bislai">
+            <a href="http://bislai.co/partidos/cha.html" class="partido-card partido-card-cha display-ib pos-r font-bislai">
                 <div class="partido-card-bg partido-card-left"></div>
                 <div class="partido-card-top partido-card-top-cha pos-a">
                     <h3 class="partido-card-title">CHUNTA ARAGONESISTA</h3>
