--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body class="mih-100">
     <div class="bislai-home">
-        <header class="font-0 w-100 zi-10">
+        <header class="font-0 w-100 zi-10 bgc-white">
             <nav class="padding-0__5-1 nav-grid">
                 <a href="http://bislai.co" class="textd-n bislai-color font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first">
             BISLAI
