--- a/creditos.html
+++ b/creditos.html
@@ -32,9 +32,9 @@
             </div>
         </nav>
     </header>
-    <div class="maw-60 margin-y1">
+    <div class="maw-60 margin-y1 font-s">
 
-    <p>Todos los datos de las mociones han sido obtenidos de la web del Ayuntamiento de Zaragoza. En un futuro no muy lejano la idea es presentar los datos de las mociones como objetos JSON siguiendo los patrones establecidos en la API del Ayuntamiento de Zaragoza.</p>
+    <p>Todos los datos de las mociones han sido obtenidos de la web del Ayuntamiento de Zaragoza.</p>
 
     <p class="font-w8">Esta web no hubiera sido posible sin la generosa ayuda de librerías distribuídas como open source.</p>
 
@@ -42,7 +42,7 @@
 
     <p>Para las gráficas de las estadisticas he utilizado <a href="http://www.chartjs.org">chart.js</a> de <a href="https://twitter.com/_nnnick">Nick Downie</a>, y que ahora es mantenida por la <a href="https://github.com/chartjs/Chart.js/graphs/contributors">comunidad</a>.</p>
 
-    <p>Para el CSS he utilizado <a href="http://github.com/jorgeatgu/astral">Astral</a>, un framework CSS hecho a mi medida y que esta fuermente inspirado en <a href="http://tachyons.io">Tachyons</a> y <a href="http://basscss.com">Basscss</a>.</p>
+    <p>Para la arquitectura CSS he utilizado <a href="http://github.com/jorgeatgu/astral">Astral</a>, un framework CSS hecho a mi medida y que esta fuermente inspirado en <a href="http://tachyons.io">Tachyons</a> y <a href="http://basscss.com">Basscss</a>.</p>
 
     <p>Para el buscador he utilizado <a href="https://github.com/Tipue/Tipue-Search">Tipue-Search</a> que esta desarrolado por <a href="http://www.tipue.com">Tipue</a>.</p>
 
@@ -65,8 +65,10 @@
     <p>El icono que acompaña las gráficas de ¿quién ha ganado más? y ¿quién ha perdido más? ha sido diseñador por <a href="https://thenounproject.com/dergraph/">Thomas Helbig</a> on the @NounProject.</p>
 
     <p>Podium by Made by Made from the Noun Project</p>
-    <p>president by Made by Made from the Noun Project</p>
-    <p>podium speech by Juan Pablo Bravo from the Noun Project</p>
+
+    <p>President by Made by Made from the Noun Project</p>
+
+    <p>Podium speech by Juan Pablo Bravo from the Noun Project</p>
 
 
 
