incluyendo imagenes y js

--- a/creditos.html
+++ b/creditos.html
@@ -70,6 +70,8 @@
 
     <p>Podium speech by Juan Pablo Bravo from the Noun Project</p>
 
+    <p>Photo by Louis Moncouyoux on Unsplash</p>
+
 
 
     </div>
