--- a/creditos.html
+++ b/creditos.html
@@ -36,43 +36,33 @@
 
     <p>Todos los datos de las mociones han sido obtenidos de la web del Ayuntamiento de Zaragoza.</p>
 
-    <p class="font-w8">Esta web no hubiera sido posible sin la generosa ayuda de librerías distribuídas como open source.</p>
+    <p class="font-w8">Esta web no hubiera sido posible sin la generosa ayuda de librerías e iconos distribuídos como open source.</p>
 
-    <p>Para las gráficas de las mociones he utilizado <a href="https://github.com/c3js/c3">c3.js</a> de Masayuki Tanaka.</p>
+    <p>Librerías</p>
+    <ul>
+        <li>Para las gráficas de las mociones he utilizado <a href="https://github.com/c3js/c3">c3.js</a> de Masayuki Tanaka.</li>
+        <li>Para las gráficas de las estadisticas he utilizado <a href="http://www.chartjs.org">chart.js</a> de <a href="https://twitter.com/_nnnick">Nick Downie</a>, y que ahora es mantenida por la <a href="https://github.com/chartjs/Chart.js/graphs/contributors">comunidad</a>.</li>
+        <li>Para la arquitectura CSS he utilizado <a href="http://github.com/jorgeatgu/astral">Astral</a>, un framework CSS hecho a mi medida y que esta fuermente inspirado en <a href="http://tachyons.io">Tachyons</a> y <a href="http://basscss.com">Basscss</a>.</li>
+        <li>Para el buscador he utilizado <a href="https://github.com/Tipue/Tipue-Search">Tipue-Search</a> que esta desarrolado por <a href="http://www.tipue.com">Tipue</a>.</li>
+    </ul>
 
-    <p>Para las gráficas de las estadisticas he utilizado <a href="http://www.chartjs.org">chart.js</a> de <a href="https://twitter.com/_nnnick">Nick Downie</a>, y que ahora es mantenida por la <a href="https://github.com/chartjs/Chart.js/graphs/contributors">comunidad</a>.</p>
+    <p>Iconos</p>
 
-    <p>Para la arquitectura CSS he utilizado <a href="http://github.com/jorgeatgu/astral">Astral</a>, un framework CSS hecho a mi medida y que esta fuermente inspirado en <a href="http://tachyons.io">Tachyons</a> y <a href="http://basscss.com">Basscss</a>.</p>
-
-    <p>Para el buscador he utilizado <a href="https://github.com/Tipue/Tipue-Search">Tipue-Search</a> que esta desarrolado por <a href="http://www.tipue.com">Tipue</a>.</p>
-
-    <p>Para la iconografía he utilizado iconos de <a href="material.io/icons/">Material</a>.</p>
-
-    <p>El icono que acompaña las gráficas de unanimidad ha sido diseñado por <a href="https://thenounproject.com/aneeque/">Aneeque Ahmed</a> on the @NounProject.</p>
-
-    <p>El icono que acompaña las gráficas de ¿quién ha presentado más mociones ha sido diseñado por <a href="https://thenounproject.com/aneeque/">Aneeque Ahmed</a> on the @NounProject.</p>
-
-    <p>El icono que acompaña las gráficas del tripartito ha sido diseñado por <a href="https://thenounproject.com/dant/">Dant</a> on the @NounProject.</p>
-
-    <p>El icono que acompaña las gráficas del tripartito ha sido diseñado por <a href="https://thenounproject.com/dergraph/">Thomas Helbig</a> on the @NounProject.</p>
-
-    <p>El icono que acompaña las gráficas de votos en contra ha sido diseñador por <a href="https://thenounproject.com/made.somewhere/">Made Somewhere</a> on the @NounProject.</p>
-
-    <p>El icono que acompaña las gráficas de votos a favor ha sido diseñador por <a href="https://thenounproject.com/made.somewhere/">Made Somewhere</a> on the @NounProject.</p>
-
-    <p>El icono que acompaña las gráficas de abstenciones ha sido diseñador por <a href="https://thenounproject.com/bravo/">Juan Pablo Bravo</a> on the @NounProject.</p>
-
-    <p>El icono que acompaña las gráficas de ¿quién ha ganado más? y ¿quién ha perdido más? ha sido diseñador por <a href="https://thenounproject.com/dergraph/">Thomas Helbig</a> on the @NounProject.</p>
-
-    <p>Podium by Made by Made from the Noun Project</p>
-
-    <p>President by Made by Made from the Noun Project</p>
-
-    <p>Podium speech by Juan Pablo Bravo from the Noun Project</p>
-
-    <p>Photo by Louis Moncouyoux on Unsplash</p>
-
-
+    <ul>
+        <li>Para la iconografía he utilizado iconos de <a href="material.io/icons/">Material</a>.</li>
+        <li>El icono que acompaña las gráficas de unanimidad ha sido diseñado por <a href="https://thenounproject.com/aneeque/">Aneeque Ahmed</a> on the @NounProject.</li>
+        <li>El icono que acompaña las gráficas de ¿quién ha presentado más mociones ha sido diseñado por <a href="https://thenounproject.com/aneeque/">Aneeque Ahmed</a> on the @NounProject.</li>
+        <li>El icono que acompaña las gráficas del tripartito ha sido diseñado por <a href="https://thenounproject.com/dant/">Dant</a> on the @NounProject.</li>
+        <li>El icono que acompaña las gráficas del tripartito ha sido diseñado por <a href="https://thenounproject.com/dergraph/">Thomas Helbig</a> on the @NounProject.</li>
+        <li>El icono que acompaña las gráficas de votos en contra ha sido diseñador por <a href="https://thenounproject.com/made.somewhere/">Made Somewhere</a> on the @NounProject.</li>
+        <li>El icono que acompaña las gráficas de votos a favor ha sido diseñador por <a href="https://thenounproject.com/made.somewhere/">Made Somewhere</a> on the @NounProject.</li>
+        <li>El icono que acompaña las gráficas de abstenciones ha sido diseñador por <a href="https://thenounproject.com/bravo/">Juan Pablo Bravo</a> on the @NounProject.</li>
+        <li>El icono que acompaña las gráficas de ¿quién ha ganado más? y ¿quién ha perdido más? ha sido diseñador por <a href="https://thenounproject.com/dergraph/">Thomas Helbig</a> on the @NounProject.</li>
+        <li>Podium by Made by Made from the Noun Project</li>
+        <li>President by Made by Made from the Noun Project</li>
+        <li>Podium speech by Juan Pablo Bravo from the Noun Project</li>
+        <li>Photo by Louis Moncouyoux on Unsplash</li>
+    </ul>
 
     </div>
 
