incluyendo más plenos del 2017

--- a/creditos.html
+++ b/creditos.html
@@ -62,6 +62,7 @@
         <li>President by Made by Made from the Noun Project</li>
         <li>Podium speech by Juan Pablo Bravo from the Noun Project</li>
         <li>Photo by Louis Moncouyoux on Unsplash</li>
+        Photo by Lukas from Pexels https://www.pexels.com/photo/charts-on-black-wooden-table-669622/
     </ul>
 
     </div>
