modificando la portada de estadisticas

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -33,9 +33,14 @@
             </div>
         </nav>
     </header>
-    <div class="padding-1 padding-1-0--l">
-        <img class="w-100" src="img/estadisticas2.jpg">
-        <p class="font-2 margin-0 margin-y1--m">Estadísticas acumuladas</p>
+    <div class="padding-1 padding-1-0--l mih-100">
+        <img class="estadisticas-photo" src="img/estadisticas.jpg">
+        <div class="estadisticas-text pos-r">
+            <p class="font-2 margin-0 margin-y1--m display-ib vertical-at font-bislai estadisticas-title">ESTADÍSTICAS ACUMULADAS</p>
+            <p class="font-1 margin-t1">Esta serie de estadísticas se han hecho a partir de las <span class="font-w8">mociones ordinarias</span> que se han presentado en el pleno del Ayuntamiento de Zaragoza desde el 15 de junio de 2015 hasta el 14 de diciembre de 2017. En algunas mociones se votan diferentes puntos, así que las <span class="font-w8">estadísticas se han obtenido de la suma de todas las votaciones</span>.</p>
+            <p>Por acuerdo de la junta de portavoces, cada grupo de la oposición puede presentar <strong>4 mociones</strong> por pleno y Zaragoza En Común, como gobierno, <strong>solamente 2</strong>.</p>
+        </div>
+
     </div>
     <section id="unanimidad" class="w-100 h-100vh--l border-t1 borderc-french-grey padding-1 padding-1-0--l">
         <article class="maw-70 h-100p vertical-am font-0">
@@ -142,11 +147,6 @@
             </div>
         </article>
     </section>
-    <article class="maw-60 padding-1 padding-1-0--l">
-        <p class="font-1">Esta serie de estadísticas se ha hecho a partir de las <span class="font-w8">mociones ordinarias</span> que se han realizado en el pleno del Ayuntamiento de Zaragoza, desde el 15 de junio de 2015 hasta el 14 de febrero de 2017. En algunas mociones se votan diferentes puntos, así que las <span class="font-w8">estadísticas se han obtenido de la suma de todas las votaciones</span>.</p>
-        <p class="font-w8">En las estadísticas están incluídos todos los plenos celebrados hasta el 14 de febrero de 2017</p>
-        <p class="font-w8">Por acuerdo de la junta de portavoces, cada grupo de la oposición puede presentar 4 mociones por pleno y Zaragoza En Común, como gobierno, solamente 2.</p>
-    </article>
     <footer class="padding-1 padding-4-0--l borderc-grey border-t1 woodsmoke font-w6 font-s footer">
         <p class="maw-60 padding-1-0 margin-t0">hola@bislai.co</p>
         <div class="maw-60">
