modificando la foto de estadisticas

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -39,7 +39,7 @@
             <p class="font-1 margin-t1">Esta serie de estadísticas se han hecho a partir de las <span class="font-w8">mociones ordinarias</span> presentadas en el pleno del Ayuntamiento de Zaragoza desde el <strong>15 de junio de 2015 hasta el 14 de diciembre de 2017</strong>. En algunas mociones se votan diferentes puntos, así que las <span class="font-w8">estadísticas se han obtenido de la suma de todas las votaciones</span>.</p>
             <p>Por acuerdo de la junta de portavoces, cada grupo de la oposición puede presentar <strong>4 mociones</strong> por pleno y Zaragoza En Común, como gobierno, <strong>solamente 2</strong>.</p>
         </div>
-        <img class="estadisticas-photo" src="img/estadisticas.jpg">
+        <img class="estadisticas-photo" src="img/estadisticas3.jpeg">
 
     </div>
     <section id="unanimidad" class="w-100 h-100vh--l border-t1 borderc-french-grey padding-1 padding-1-0--l">
