modificando la portada

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
     </footer>
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.0/mapbox-gl.js'></script>
+    <script type="text/javascript" src="mociones.json"></script>
     <script type="text/javascript" src="js/mapa.js"></script>
     <script>
     $(document).ready(function() {
