--- a/creditos.html
+++ b/creditos.html
@@ -36,17 +36,17 @@
 
     <p>Todos los datos de las mociones han sido obtenidos de la web del Ayuntamiento de Zaragoza.</p>
 
-    <p class="font-w8">Esta web no hubiera sido posible sin la generosa ayuda de librerías e iconos distribuídos como open source.</p>
+    <p>Esta web no hubiera sido posible sin la generosa ayuda de librerías e iconos distribuídos como open source.</p>
 
-    <p>Librerías</p>
+    <h2>Librerías</h2>
     <ul>
         <li>Para las gráficas de las mociones he utilizado <a href="https://github.com/c3js/c3">c3.js</a> de Masayuki Tanaka.</li>
-        <li>Para las gráficas de las estadisticas he utilizado <a href="http://www.chartjs.org">chart.js</a> de <a href="https://twitter.com/_nnnick">Nick Downie</a>, y que ahora es mantenida por la <a href="https://github.com/chartjs/Chart.js/graphs/contributors">comunidad</a>.</li>
+        <li>Para las gráficas de las estadísticas he utilizado <a href="http://www.chartjs.org">chart.js</a> de <a href="https://twitter.com/_nnnick">Nick Downie</a>, y que ahora es mantenida por la <a href="https://github.com/chartjs/Chart.js/graphs/contributors">comunidad</a>.</li>
         <li>Para la arquitectura CSS he utilizado <a href="http://github.com/jorgeatgu/astral">Astral</a>, un framework CSS hecho a mi medida y que esta fuermente inspirado en <a href="http://tachyons.io">Tachyons</a> y <a href="http://basscss.com">Basscss</a>.</li>
-        <li>Para el buscador he utilizado <a href="https://github.com/Tipue/Tipue-Search">Tipue-Search</a> que esta desarrolado por <a href="http://www.tipue.com">Tipue</a>.</li>
+        <li>Para el buscador he utilizado <a href="https://github.com/Tipue/Tipue-Search">Tipue-Search</a> que esta desarrollado por <a href="http://www.tipue.com">Tipue</a>.</li>
     </ul>
 
-    <p>Iconos</p>
+    <h2>Iconos</h2>
 
     <ul>
         <li>Para la iconografía he utilizado iconos de <a href="material.io/icons/">Material</a>.</li>
@@ -70,7 +70,7 @@
     <footer class="padding-1 padding-4-0--l borderc-grey border-t1 woodsmoke font-w6 font-s footer">
         <p class="maw-60 padding-1-0 margin-t0">hola@bislai.co</p>
         <div class="maw-60">
-            <a class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1" href="http://bislai.co/creditos">CREDITOS</a>
+            <a class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1" href="http://bislai.co/creditos">Créditos</a>
             <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Twitter</a>
             <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">GitHub</a>
         </div>
