ordenando la landing de partidos

--- a/partidos.html
+++ b/partidos.html
@@ -36,31 +36,31 @@
         </nav>
     </header>
     <section class="partido-container">
-            <a href="http://bislai.co/partidos/pp.html" class="partido-card display-ib pos-r font-bislai">
-                <div class="partido-card-bg"></div>
+            <a href="http://bislai.co/partidos/pp.html" class="partido-card pos-r partido-card-top-pp font-bislai">
+                <div class="partido-card-bg partido-card-left"></div>
                 <div class="partido-card-top pos-a">
                     <h3 class="partido-card-title">PARTIDO POPULAR</h3>
                     <p class="partido-card-votos">87554 VOTOS / 26.88%</p>
                     <p class="partido-card-concejales">10 CONCEJALES</p>
                 </div>
             </a>
-            <a href="http://bislai.co/partidos/zec.html" class="partido-card partido-card-right partido-card-zec display-ib pos-r font-bislai">
-                <div class="partido-card-bg partido-card-left"></div>
+            <a href="http://bislai.co/partidos/zec.html" class="partido-card partido-card-right partido-card-zec pos-r font-bislai">
+                <div class="partido-card-bg "></div>
                 <div class="partido-card-top partido-card-top-right partido-card-top-zec pos-a">
                     <h3 class="partido-card-title">ZARAGOZA EN COMÚN</h3>
                     <p class="partido-card-votos">80040 VOTOS / 24.57%</p>
                     <p class="partido-card-concejales">9 CONCEJALES</p>
                 </div>
             </a>
-            <a href="http://bislai.co/partidos/psoe.html" class="partido-card partido-card-psoe display-ib pos-r font-bislai">
+            <a href="http://bislai.co/partidos/psoe.html" class="partido-card partido-card-psoe pos-r font-bislai">
                 <div class="partido-card-bg partido-card-left"></div>
                 <div class="partido-card-top partido-card-top-psoe pos-a">
-                    <h3 class="partido-card-title">PARTIDO SOCIALISTA OBRERO ESPAÑOL</h3>
+                    <h3 class="partido-card-title">PSOE</h3>
                     <p class="partido-card-votos">60746 VOTOS / 18.65%</p>
                     <p class="partido-card-concejales">6 CONCEJALES</p>
                 </div>
             </a>
-            <a href="http://bislai.co/partidos/cs.html" class="partido-card partido-card-right partido-card-cs display-ib pos-r font-bislai">
+            <a href="http://bislai.co/partidos/cs.html" class="partido-card partido-card-right partido-card-cs pos-r font-bislai">
                 <div class="partido-card-bg"></div>
                 <div class="partido-card-top partido-card-top-right partido-card-top-cs pos-a">
                     <h3 class="partido-card-title">CIUDADANOS</h3>
@@ -68,7 +68,7 @@
                     <p class="partido-card-concejales">4 CONCEJALES</p>
                 </div>
             </a>
-            <a href="http://bislai.co/partidos/cha.html" class="partido-card partido-card-cha display-ib pos-r font-bislai">
+            <a href="http://bislai.co/partidos/cha.html" class="partido-card partido-card-cha pos-r font-bislai">
                 <div class="partido-card-bg partido-card-left"></div>
                 <div class="partido-card-top partido-card-top-cha pos-a">
                     <h3 class="partido-card-title">CHUNTA ARAGONESISTA</h3>
