--- a/partidos.html
+++ b/partidos.html
@@ -43,6 +43,7 @@
                     <p class="partido-card-votos">87554 VOTOS / 26.88%</p>
                     <p class="partido-card-concejales">10 CONCEJALES</p>
                     <p class="partido-card-button">ESTADÍSTICAS SOBRE EL PARTIDO POPULAR</p>
+                    <svg class="partido-card-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 512"><path d="M166.9 264.5l-117.8 116c-4.7 4.7-12.3 4.7-17 0l-7.1-7.1c-4.7-4.7-4.7-12.3 0-17L127.3 256 25.1 155.6c-4.7-4.7-4.7-12.3 0-17l7.1-7.1c4.7-4.7 12.3-4.7 17 0l117.8 116c4.6 4.7 4.6 12.3-.1 17z"/></svg>
                 </div>
             </a>
             <a href="http://bislai.co/partidos/zec.html" class="partido-card partido-card-right partido-card-zec pos-r font-bislai">
@@ -52,6 +53,7 @@
                     <p class="partido-card-votos">80040 VOTOS / 24.57%</p>
                     <p class="partido-card-concejales">9 CONCEJALES</p>
                     <p class="partido-card-button">ESTADÍSTICAS SOBRE ZARAGOZA EN COMÚN</p>
+                    <svg class="partido-card-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 512"><path d="M166.9 264.5l-117.8 116c-4.7 4.7-12.3 4.7-17 0l-7.1-7.1c-4.7-4.7-4.7-12.3 0-17L127.3 256 25.1 155.6c-4.7-4.7-4.7-12.3 0-17l7.1-7.1c4.7-4.7 12.3-4.7 17 0l117.8 116c4.6 4.7 4.6 12.3-.1 17z"/></svg>
                 </div>
             </a>
             <a href="http://bislai.co/partidos/psoe.html" class="partido-card partido-card-psoe pos-r font-bislai">
@@ -61,6 +63,7 @@
                     <p class="partido-card-votos">60746 VOTOS / 18.65%</p>
                     <p class="partido-card-concejales">6 CONCEJALES</p>
                     <p class="partido-card-button">ESTADÍSTICAS SOBRE EL PSOE</p>
+                    <svg class="partido-card-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 512"><path d="M166.9 264.5l-117.8 116c-4.7 4.7-12.3 4.7-17 0l-7.1-7.1c-4.7-4.7-4.7-12.3 0-17L127.3 256 25.1 155.6c-4.7-4.7-4.7-12.3 0-17l7.1-7.1c4.7-4.7 12.3-4.7 17 0l117.8 116c4.6 4.7 4.6 12.3-.1 17z"/></svg>
                 </div>
             </a>
             <a href="http://bislai.co/partidos/cs.html" class="partido-card partido-card-right partido-card-cs pos-r font-bislai">
@@ -70,6 +73,7 @@
                     <p class="partido-card-votos">40046 VOTOS / 12.29%</p>
                     <p class="partido-card-concejales">4 CONCEJALES</p>
                     <p class="partido-card-button">ESTADÍSTICAS SOBRE CIUDADANOS</p>
+                    <svg class="partido-card-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 512"><path d="M166.9 264.5l-117.8 116c-4.7 4.7-12.3 4.7-17 0l-7.1-7.1c-4.7-4.7-4.7-12.3 0-17L127.3 256 25.1 155.6c-4.7-4.7-4.7-12.3 0-17l7.1-7.1c4.7-4.7 12.3-4.7 17 0l117.8 116c4.6 4.7 4.6 12.3-.1 17z"/></svg>
                 </div>
             </a>
             <a href="http://bislai.co/partidos/cha.html" class="partido-card partido-card-cha pos-r font-bislai">
@@ -79,6 +83,7 @@
                     <p class="partido-card-votos">22076 VOTOS / 6.78%</p>
                     <p class="partido-card-concejales">2 CONCEJALES</p>
                     <p class="partido-card-button">ESTADÍSTICAS SOBRE CHUNTA ARAGONESISTA</p>
+                    <svg class="partido-card-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 512"><path d="M166.9 264.5l-117.8 116c-4.7 4.7-12.3 4.7-17 0l-7.1-7.1c-4.7-4.7-4.7-12.3 0-17L127.3 256 25.1 155.6c-4.7-4.7-4.7-12.3 0-17l7.1-7.1c4.7-4.7 12.3-4.7 17 0l117.8 116c4.6 4.7 4.6 12.3-.1 17z"/></svg>
                 </div>
             </a>
     </section>
