--- a/index.html
+++ b/index.html
@@ -18,52 +18,40 @@
 </head>
 
 <body class="mih-100">
-    <div class="bislai-home">
-        <header class="font-0 w-100 zi-10">
-            <nav class="padding-0__5-1 nav-grid">
-                <a href="http://bislai.co" class="textd-n bislai-color font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first">
+    <div class="column blue-light">
+        <header class="font-0 w-100 zi-10 header-home">
+            <nav class="nav-grid">
+                <a href="http://bislai.co" class="textd-n white font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first">
             BISLAI
             </a>
-                <div class="w-100--m maw-70p--l padding-0__5-0">
-                    <div class="pos-r">
-                        <form action="http://bislai.co/buscador">
-                            <input placeholder="Busca en cualquier pleno" class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
-                            <button class="btn-search" type="submit">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                                    <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#2f17a9" />
-                                </svg>
-                            </button>
-                        </form>
-                    </div>
-                </div>
                 <div class="nav-grid-second display-n display-ib--m">
-                    <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline bislai-color vertical-am display-ib font-bislai font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
+                    <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline white vertical-am display-ib font-bislai font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
                 </div>
             </nav>
         </header>
-        <div class="bisla-home-body">
-            <div class="bislai-home-body-grid">
-                <div class="bislai-home-body-text">
-                    <div class="bislai-home-body-left-text">
-                        <span class="bislai-home-body-left-text-white font-bislai"><span class="line-throught">ACCESIBILIDAD</span> POLÍTICA</span>
-                        <div class="bislai-home-body-left-container">
-                            <svg width="43" height="75" viewBox="0 0 43 75" class="bislai-icon" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M42 32.7h-5.7c-.3-5.8-4-10-9.8-11.5 2.6-1.6 4.3-4.4 4.3-7.7v-1.2c0-1.2-.2-2.4-.6-3.4 1.3-1 2-2.8 2.2-5 0-1.4 0-3-1-3.4-.5-.2-1 0-1.2.4-.6.6-2.5.2-4.4-.2-2-.5-4.6-1-6.8-.6-5 1-6 5.3-5.7 7.2-.8 1.5-1.2 3-1.2 4.8v1c0 3.5 2 6.3 4.4 8-5.8 1.6-9.6 5.7-9.8 11.5H1c-.6 0-1 .3-1 1V38c0 .6.4 1 1 1h3v35c0 .4.3.8 1 .8h33c.6 0 1-.4 1-1V39.3h3c.6 0 1-.4 1-1v-4.6c0-.6-.4-1-1-1zM19.4 2c2-.3 4 0 6 .6 2 .5 3.8 1 5.2.4 0 .8 0 2-.5 3.2 0 .5-.4.8-.6 1C27.8 5 25 3.6 22 3.6h-1.2c-2 0-4 .7-5.5 2 .3-1.4 1.4-3 4-3.4zM21 20.7c-4 0-7-3.2-7-7v-1.3c0-3.8 3-7 7-7h1c4 0 7 3 7 7v1.2c0 3.8-3 7-7 7h-1zm.5 2c6.3 0 12.6 3 13 10h-12v-2.4c.4-.3.8-.8.8-1.5v-2.4c0-1-.7-1.8-1.8-1.8-1 0-1.8.7-1.8 1.8v2.4c0 .7.4 1 1 1.5v2.5H8.3c.5-7.2 6.8-10.2 13-10.2zM37 73H6v-34h31v34zm4-36H2v-2.6h39v2.7z" fill="#000" />
-                            </svg>
-                        </div>
-                    </div>
-                    <div class="bislai-home-body-right">
-                        <p class="bislai-home-body-right-text"><strong>Bislai</strong> muestra de una manera más <strong>accesible</strong> las <strong>propuestas y acuerdos</strong> que toman los partidos políticos en el <strong>Ayuntamiento de Zaragoza.</strong></p>
-                        <p class="bislai-home-body-right-text">Todos los datos han sido obtenidos del <strong>Ayuntamiento de Zaragoza.</strong></p>
-                    </div>
-                </div>
-                <div class="bislai-home-body-img">
-                    <div class="bisla-home-body-left-gradient"></div>
-                    <img src="img/urnas.jpg" class="bislai-home-body-img">
-
-                </div>
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/34591/urnas.jpg" />
+        <div class="bislai-home-body-left-text">
+            <span class="bislai-home-body-left-text-white font-bislai"><span class="line-throught">ACCESIBILIDAD</span> POLÍTICA</span>
+            <div class="bislai-home-body-left-container">
+                <svg width="43" height="75" viewBox="0 0 43 75" class="bislai-icon" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M42 32.7h-5.7c-.3-5.8-4-10-9.8-11.5 2.6-1.6 4.3-4.4 4.3-7.7v-1.2c0-1.2-.2-2.4-.6-3.4 1.3-1 2-2.8 2.2-5 0-1.4 0-3-1-3.4-.5-.2-1 0-1.2.4-.6.6-2.5.2-4.4-.2-2-.5-4.6-1-6.8-.6-5 1-6 5.3-5.7 7.2-.8 1.5-1.2 3-1.2 4.8v1c0 3.5 2 6.3 4.4 8-5.8 1.6-9.6 5.7-9.8 11.5H1c-.6 0-1 .3-1 1V38c0 .6.4 1 1 1h3v35c0 .4.3.8 1 .8h33c.6 0 1-.4 1-1V39.3h3c.6 0 1-.4 1-1v-4.6c0-.6-.4-1-1-1zM19.4 2c2-.3 4 0 6 .6 2 .5 3.8 1 5.2.4 0 .8 0 2-.5 3.2 0 .5-.4.8-.6 1C27.8 5 25 3.6 22 3.6h-1.2c-2 0-4 .7-5.5 2 .3-1.4 1.4-3 4-3.4zM21 20.7c-4 0-7-3.2-7-7v-1.3c0-3.8 3-7 7-7h1c4 0 7 3 7 7v1.2c0 3.8-3 7-7 7h-1zm.5 2c6.3 0 12.6 3 13 10h-12v-2.4c.4-.3.8-.8.8-1.5v-2.4c0-1-.7-1.8-1.8-1.8-1 0-1.8.7-1.8 1.8v2.4c0 .7.4 1 1 1.5v2.5H8.3c.5-7.2 6.8-10.2 13-10.2zM37 73H6v-34h31v34zm4-36H2v-2.6h39v2.7z" fill="#000" />
+                </svg>
             </div>
-
+        </div>
+        <div class="bislai-home-body-right">
+            <p class="bislai-home-body-right-text"><strong>Bislai</strong> muestra de una manera más <strong>accesible</strong> las <strong>propuestas y acuerdos</strong> que toman los partidos políticos en el <strong>Ayuntamiento de Zaragoza.</strong></p>
+        <div class="padding-0__5-0">
+            <div class="pos-r">
+                <form action="http://bislai.co/buscador">
+                    <input placeholder="Busca en cualquier pleno" class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
+                    <button class="btn-search" type="submit">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#2f17a9" />
+                        </svg>
+                    </button>
+                </form>
+            </div>
+        </div>
         </div>
     </div>
     <section class="border-t1 padding-1 border-b1 grey borderc-grey padding-4-0--l mih-100">
@@ -85,20 +73,28 @@
             </section>
             <!-- FEBRERO -->
             <section class="tabla-calendario  contenido2">
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-07-2015.html">28 de enero de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/02-10-2015.html">26 de febrero de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/30-10-2015.html">23 de marzo de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-11-2015.html">29 de abril de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/23-12-2015.html">27 de mayo de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="">1 de julio de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-11-2015.html">22 de julio de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/23-12-2015.html">30 de septiembre de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="">28 de octubre de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-11-2015.html">2 de diciembre de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/23-12-2015.html">23 de diciembre de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/28-01-2016.html">28 de enero de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/26-02-2016.html">26 de febrero de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/23-03-2016.html">23 de marzo de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/29-04-2016.html">29 de abril de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/27-05-2016.html">27 de mayo de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/01-07-2016.html">1 de julio de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/22-07-2016.html">22 de julio de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/30-09-2016.html">30 de septiembre de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/28-10-2016.html">28 de octubre de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/02-12-2016.html">2 de diciembre de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2016/23-12-2016.html">23 de diciembre de 2016</a>
             </section>
             <section class="tabla-calendario  contenido3">
-                <p>2017</p>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/03-02-2017.html">03 de febrero de 2017</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/24-02-2017.html">24 de febrero de 2017</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/31-03-2017.html">31 de marzo de 2017</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/02-06-2017.html">02 de junio de 2017</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/30-06-2017.html">30 de junio de 2017</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/28-07-2017.html">28 de julio de 2017</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/29-09-2017.html">23 de septiembre de 2017</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/30-10-2017.html">30 de octubre de 2017</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/24-11-2017.html">24 de noviembre de 2017</a>
             </section>
         </article>
     </section>
