incluyendo las mociones de septiembre de 2017gs

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
     </div>
     <section class="border-t1 padding-1 border-b1 grey borderc-grey padding-4-0--l mih-100">
-        <h2 class="margin-b0 maw-60 font-2 margin-b2 font-s">CALENDARIO DE PLENOS</h2>
+        <h2 class="maw-60 margin-b2 font-bislai tabs-title">CALENDARIO DE PLENOS</h2>
         <article class="maw-60">
             <input class="input-record" id="tab1" type="radio" name="tabs" checked>
             <label class="label-record font-3 font-s" for="tab1">2015</label>
