modificando la pagina de estadisticas

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -11,36 +11,24 @@
 </head>
 
 <body class="mih-100">
-    <header class="font-0 w-100 zi-10 bgc-white">
-        <nav class="padding-0__5-1 nav-grid">
-            <a href="http://bislai.co" class="textd-n bislai-color font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first">
-        BISLAI
-        </a>
-            <div class="w-100--m maw-70p--l padding-0__5-0">
-                <div class="pos-r">
-                    <form action="http://bislai.co/buscador">
-                        <input placeholder="Busca en cualquier pleno" class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
-                        <button class="btn-search" type="submit">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                                <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#2f17a9" />
-                            </svg>
-                        </button>
-                    </form>
+    <div class="column blue-light">
+        <header class="font-0 w-100 zi-10 header-home">
+            <nav class="nav-grid">
+                <a href="http://bislai.co" class="textd-n white font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first">
+            BISLAI
+            </a>
+                <div class="nav-grid-second display-n display-ib--m">
+                    <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline white vertical-am display-ib font-bislai font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
                 </div>
-            </div>
-            <div class="nav-grid-second display-n display-ib--m">
-                <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline bislai-color vertical-am display-ib font-bislai font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
-            </div>
-        </nav>
-    </header>
-    <div class="estadisticas-container">
-        <div class="estadisticas-grid">
-            <div class="estadisticas-text">
-                <p class="font-2 margin-0 margin-y1--m display-ib vertical-at font-bislai estadisticas-title">ESTADÍSTICAS ACUMULADAS</p>
-                <p class="font-1 margin-t1">Esta serie de estadísticas se han hecho a partir de las <span class="font-w8">mociones ordinarias</span> presentadas en el pleno del Ayuntamiento de Zaragoza desde el <strong>15 de junio de 2015 hasta el 14 de diciembre de 2017</strong>. En algunas mociones se votan diferentes puntos, así que las <span class="font-w8">estadísticas se han obtenido de la suma de todas las votaciones</span>.</p>
-                <p>Por acuerdo de la junta de portavoces, cada grupo de la oposición puede presentar <strong>4 mociones</strong> por pleno y Zaragoza En Común, como gobierno, <strong>solamente 2</strong>.</p>
-            </div>
-            <img class="estadisticas-photo" src="img/estadisticas3.jpeg">
+            </nav>
+        </header>
+        <img src="img/estadisticas3.jpeg"/>
+        <div class="bislai-home-body-left-text">
+            <span class="bislai-home-body-left-text-white font-bislai">ESTADÍSTICAS ACUMULADAS</span>
+        </div>
+        <div class="bislai-home-body-right">
+            <p class="font-1 margin-t1 bislai-home-body-right-text">Esta serie de estadísticas se han hecho a partir de las <span class="font-w8">mociones ordinarias</span> presentadas en el pleno del Ayuntamiento de Zaragoza desde el <strong>15 de junio de 2015 hasta el 14 de diciembre de 2017</strong>. En algunas mociones se votan diferentes puntos, así que las <span class="font-w8">estadísticas se han obtenido de la suma de todas las votaciones</span>.</p>
+            <p>Por acuerdo de la junta de portavoces, cada grupo de la oposición puede presentar <strong>4 mociones</strong> por pleno y Zaragoza En Común, como gobierno, <strong>solamente 2</strong>.</p>
         </div>
     </div>
     <section id="unanimidad" class="w-100 h-100vh--l border-t1 borderc-french-grey padding-1 padding-1-0--l">
