--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
             </nav>
         </header>
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/34591/urnas.jpg" />
+        <img src="img/urnas.jpg"/>
         <div class="bislai-home-body-left-text">
             <span class="bislai-home-body-left-text-white font-bislai"><span class="line-throught">ACCESIBILIDAD</span> POLÍTICA</span>
             <div class="bislai-home-body-left-container">
