eliminando depdencias antiguas

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -31,6 +31,8 @@
             <p>Por acuerdo de la junta de portavoces, cada grupo de la oposición puede presentar <strong>4 mociones</strong> por pleno y Zaragoza En Común, como gobierno, <strong>solamente 2</strong>.</p>
         </div>
     </div>
+
+    <div id="chart-unanimidad"></div>
     <section id="unanimidad" class="w-100 h-100vh--l border-t1 borderc-french-grey padding-1 padding-1-0--l">
         <article class="maw-70 h-100p vertical-am font-0">
             <p class="font-2 margin-0 margin-y1--m margin-b2--m">¿Cuantas mociones se han votado por unanimidad?</p>
@@ -145,9 +147,9 @@
         </div>
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
     </footer>
-    <script type="text/javascript" src="js/mo.min.js"></script>
     <script type="text/javascript" src="js/ScrollMagic.min.js"></script>
     <script type="text/javascript" src="js/Chart.min.js"></script>
+    <script src="https://unpkg.com/frappe-charts@0.0.8/dist/frappe-charts.min.iife.js"></script>
     <script type="text/javascript" src="js/estadisticas.js"></script>
     <script>
     (function(i, s, o, g, r, a, m) {
