chart fixed scrollama

--- a/estadisticas-scrollama.html
+++ b/estadisticas-scrollama.html
@@ -145,16 +145,14 @@
 
        #scroll {
         position: relative;
-        border-top: 2px dashed #000;
-        border-bottom: 2px dashed #000;
        }
 
        .scroll__graphic {
         position: -webkit-sticky;
         position: sticky;
         float: right;
-        top: 0;
-        right: 2rem;
+        top: 30vh;
+        right: 10vw;
         -webkit-transform: translate3d(0, 0, 0);
         -moz-transform: translate3d(0, 0, 0);
         transform: translate3d(0, 0, 0);
