pasando a estadisticas toda la integración de scrollama

--- a/estadisticas-scrollama.html
+++ b/estadisticas-scrollama.html
@@ -37,29 +37,29 @@
         </div>
         <div class='scroll__text'>
             <div class='step' data-step='1'>
-                <p class="font-1-5 margin-0 margin-y1--m margin-b2--m font-bislai"> ¿Cuantas mociones se han votado por unanimidad?</p>
+                <p class="title-estadisticas"> ¿Cuantas mociones se han votado por unanimidad?</p>
 
                 <p class="font-1">En el pleno del Ayuntamiento de Zaragoza se han realizado <span class="font-w8">274 votaciones</span>, de las cuales un <span class="font-w8">37.59%</span> se han votado por unanimidad.</p>
             </div>
             <div class='step' data-step='2'>
-                <p class="font-1-5 margin-0 margin-y1--m margin-b2--m font-bislai">Los tripartitos del pleno</p>
+                <p class="title-estadisticas">Los tripartitos del pleno</p>
                 <p>El <span class="font-w8">tripartito</span> es una expresión que se ha utilizado asiduamente en <span class="font-w8">Zaragoza</span> a lo largo de los años.</p>
                 <p>El tripartito compuesto por <span class="font-w8">PP, PSOE y C'S</span> se alza con el primer puesto con un <span class="font-w8"> 11.31%</span></p> <p>En segundo lugar el tripartito compuesto por <span class="font-w8">ZEC, PSOE y CHA</span> con <span class="font-w8">10.58%</span>.</p>
             </div>
             <div class='step' data-step='3'>
-                <p class="font-1-5 margin-0 margin-y1--m margin-b2--m font-bislai">¿Quién ha presentado más mociones?</p>
+                <p class="title-estadisticas">¿Quién ha presentado más mociones?</p>
                 <p>En el pleno del Ayuntamiento de Zaragoza <span class="font-w8">se han presentado 274 mociones</span>.</p><p> El primer lugar es para el <span class="font-w8">PSOE</span> con 50 mociones presentadas. </p><p> En segundo lugar el <span class="font-w8">PP</span> con <span class="font-w8">47</span></p><p> En tercer lugar <span class="font-w8">C'S</span> con <span class="font-w8">44</span></p><p> En cuarto lugar esta <span class="font-w8">CHA</span> con <span class="font-w8">36</span>.</p><p> Y en quinto lugar esta <span class="font-w8">ZEC</span> con <span class="font-w8">28</span>.</p>
             </div>
             <div class='step' data-step='4'>
-                <p class="font-1-5 margin-0 margin-y1--m margin-b2--m font-bislai">¿Quién se ha abstenido más?</p>
+                <p class="title-estadisticas">¿Quién se ha abstenido más?</p>
                 <p>La abstención la lideran <span class="font-w8">ZEC</span> y <span class="font-w8">CHA.</span></p><p>En tercer lugar esta <span class="font-w8">C'S</span>.</p><p> En cuarto lugar <span class="font-w8">PP</span>.</p><p> Y en quinto lugar el <span class="font-w8">PSOE</span>.</p>
             </div>
             <div class='step' data-step='5'>
-                <p class="font-1-5 margin-0 margin-y1--m margin-b2--m font-bislai">¿Quién vota más en contra?</p>
+                <p class="title-estadisticas">¿Quién vota más en contra?</p>
                 <p>En primer lugar <span class="font-w8">ZEC</span>, que ha optado por el voto en contra en el 24% de las votaciones.</p><p> En segundo lugar el <span class="font-w8">PP</span> con un 19%.</p> <p>El tercer lugar es para <span class="font-w8">CHA</span> con el 15%.</p><p> En cuarto lugar esta el <span class="font-w8">PSOE</span> con un 11%.</p><p> Y el quinto lugar es para <span class="font-w8">C'S</span> con el 8%.</p>
             </div>
             <div class='step' data-step='6'>
-                <p class="font-1-5 margin-0 margin-y1--m margin-b2--m font-bislai">¿Quién vota más a favor?</p>
+                <p class="title-estadisticas">¿Quién vota más a favor?</p>
                 <p>En primer lugar el <span class="font-w8">PSOE</span>, que ha optado por el voto a favor en el 46% de las votaciones.</p><p> En segundo lugar esta <span class="font-w8">C'S</span> con un 45%.</p><p> El tercer lugar es para <span class="font-w8">CHA</span> con el 36%.</p><p> En penúltimo lugar esta el <span class="font-w8">PP</span> con un 35%.</p><p> Y en qiunto lugar <span class="font-w8">ZEC</span> con el 28%.</p>
             </div>
         </div>
