--- a/estadisticas.html
+++ b/estadisticas.html
@@ -76,6 +76,7 @@
     </footer>
     <script type="text/javascript" src="js/scrollama.min.js"></script>
     <script type="text/javascript" src="js/Chart.min.js"></script>
+    <script type="text/javascript" src="js/chartjs-plugin-datalabels.min.js"></script>
     <script type="text/javascript" src="js/estadisticas.js"></script>
     <script>
     (function(i, s, o, g, r, a, m) {
