cabecera para todas las paginas de partidos

--- a/partidos/ciudadanos.html
+++ b/partidos/ciudadanos.html
@@ -38,6 +38,13 @@
     <section class="partidos-cabecera bgc-cs">
         <div class="partidos-cabecera-izda">
             <h3 class="partidos-cabecera-title">Ciudadanos</h3>
+            <span class="partidos-concejales">Concejales:</span>
+            <ol>
+                <li class="partido-concejales-lista">Pepito</li>
+                <li class="partido-concejales-lista">Juanito</li>
+                <li class="partido-concejales-lista">Fulanito</li>
+                <li class="partido-concejales-lista">Mengano</li>
+            </ol>
 
             <a href="#" class="partidos-twitter">TWITTER</a>
 
