--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                 <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/29-09-2017.html">23 de septiembre de 2017</a>
                 <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/30-10-2017.html">30 de octubre de 2017</a>
                 <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/24-11-2017.html">24 de noviembre de 2017</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2017/22-12-2017.html">22 de diciembre de 2017</a>
             </section>
         </article>
     </section>
