terminanda la pagina de ciudadanos

--- a/partidos/ciudadanos.html
+++ b/partidos/ciudadanos.html
@@ -34,32 +34,28 @@
             </div>
         </nav>
     </header>
-
     <section class="partidos-cabecera bgc-cs">
         <div class="partidos-cabecera-izda">
             <h3 class="partidos-cabecera-title">Ciudadanos</h3>
-            <span class="partidos-concejales">Concejales:</span>
+            <p class="partidos-cabecera-texto maw-50">En esta legislatura ha presentado 76 mociones. Estas mociones han dado como resultado 85 votaciones. Es el partido que más mociones ha presentado. </p>
+            <span class="partidos-concejales"><strong>Concejales:</strong></span>
             <ol>
                 <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/martinez-ortin.htm">Dª. María Elena Martínez Ortín.</a></li>
                 <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/alberto-casanal.htm">D. Alberto Casañal Pina</a></li>
                 <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/sara-fernandez.htm">Dª. Sara María Fernández Escuer</a></li>
                 <li class="partido-concejales-lista"><a target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/cristina-garcia.htm">Dª. Cristina García Torres.</a></li>
             </ol>
-
-            <a href="#" class="partidos-twitter">TWITTER</a>
-
         </div>
         <div class="partidos-cabecera-dcha">
             <canvas id="historico"></canvas>
+            <p class="partidos-cabecera-texto-derecha">Solamente han concurrido a las elecciones del 2015.</p>
         </div>
     </section>
-    <p class="partidos-grafico-parrafo maw-50">Ciudadanos en esta legislatura ha presentado 76 mociones. Es el partido que más mociones ha presentado. Estas mociones han dado como resultado 85 votaciones.</p>
     <section class="partidos-grafico">
         <div class="partidos-grafico-texto">
             <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA EN SU CONTRA?
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
-            <span class="partidos-grafico-ciudadanos-after"></span>
 
             <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces han votado en su contra el resto de partidos. Es el partido que menos votos en contra recibe.</p>
         </div>
@@ -70,7 +66,7 @@
     </section>
     <section class="partidos-grafico grafico-a-favor">
         <div class="partidos-grafico-texto">
-            <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA <span class="partidos-grafico-a-favor">A FAVOR</span>?
+            <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA A FAVOR?
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
 
